fix squish chen

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,7 @@ body {
     display: block;
     overflow: hidden;
     width: 14em;
+    min-height: 14em;
     border-radius: 100%;
     border: .4em solid snow;
   }
